crates/swc/tests/tsc-references/classExtendsItselfIndirectly2.1.normal.js
//// [classExtendsItselfIndirectly2.ts]
import { _ as _call_super } from "@swc/helpers/_/_call_super";
import { _ as _class_call_check } from "@swc/helpers/_/_class_call_check";
import { _ as _inherits } from "@swc/helpers/_/_inherits";
var C = /*#__PURE__*/ function(_N_E) {
    "use strict";
    _inherits(C, _N_E);
    function C() {
        _class_call_check(this, C);
        return _call_super(this, C, arguments);
    }
    return C;
} // error
(N.E);
(function(M) {
    var D = /*#__PURE__*/ function(C) {
        "use strict";
        _inherits(D, C);
        function D() {
            _class_call_check(this, D);
            return _call_super(this, D, arguments);
        }
        return D;
    }(C);
    M.D = D;
})(M || (M = {}));
(function(N) {
    var E = /*#__PURE__*/ function(_M_D) {
        "use strict";
        _inherits(E, _M_D);
        function E() {
            _class_call_check(this, E);
            return _call_super(this, E, arguments);
        }
        return E;
    }(M.D);
    N.E = E;
})(N || (N = {}));
(function(O) {
    var C2 = /*#__PURE__*/ function(_Q_E2) {
        "use strict";
        _inherits(C2, _Q_E2);
        function C2() {
            _class_call_check(this, C2);
            return _call_super(this, C2, arguments);
        }
        return C2;
    } // error
    (Q.E2);
    (function(P) {
        var D2 = /*#__PURE__*/ function(C2) {
            "use strict";
            _inherits(D2, C2);
            function D2() {
                _class_call_check(this, D2);
                return _call_super(this, D2, arguments);
            }
            return D2;
        }(C2);
        P.D2 = D2;
    })(P || (P = {}));
    (function(Q) {
        var E2 = /*#__PURE__*/ function(_P_D2) {
            "use strict";
            _inherits(E2, _P_D2);
            function E2() {
                _class_call_check(this, E2);
                return _call_super(this, E2, arguments);
            }
            return E2;
        }(P.D2);
        Q.E2 = E2;
    })(Q || (Q = {}));
    var P, Q;
})(O || (O = {}));
var M, N, O;
